--- a/Frontend/src/components/Layout/Navbar/navbar.css
+++ b/Frontend/src/components/Layout/Navbar/navbar.css
@@ -12,6 +12,8 @@
 
     width:100%;
 
+    overflow-x:clip;
+
     z-index:1000;
 
     transition:.4s ease;
@@ -214,9 +216,21 @@
 
 @media(max-width:992px){
 
+.navbar{
+
+left:0;
+
+right:0;
+
+width:auto;
+
+}
+
 .navbar-container{
 
-width:100%;
+width:100vw;
+
+max-width:100vw;
 
 margin:0;
 
@@ -270,13 +284,13 @@ right:auto;
 
 .nav-links > li{
 
-display:none;
+display:none !important;
 
 }
 
 .nav-links a{
 
-display:none;
+display:none !important;
 
 }
 
